--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,90 @@
 page-home {
-
+    .topleftcard{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+    }
+    .topcentercard{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+    }
+    .toprightcard{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+    }
+    .maincontenttopstyle{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+        padding:0% 0% 0% 5%;
+    }
+    .piediv{
+            color:#FFFFFF;
+            background:rgb(7,33,58);
+            padding: 0%;
+            width:100%;
+            height:200px;
+    }
+    .bardiv{
+            color:#FFFFFF;
+            background:rgb(7,33,58); 
+            padding: 0%;
+            margin:0%;
+            width:100%;
+            height:500px;
+    }
+    .profitgridstyle{
+        color:#FFFFFF;
+        background:rgb(7,33,58);
+        padding:0% 0% 0% 0%;
+        margin:0% 0% 0% 0px;
+        width:98%;
+    }
+    .maincontentstyle{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+        padding:0% 0% 0% 5%;
+    }
+    .hintpartstyle{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);
+        padding:0% 0% 0% 0%;
+    }
+    .factorystatestyle{
+        color:#FFFFFF;
+        background-color:rgb(7,33,58);
+        ion-card-header{
+            color:#FFFFFF;
+            background-color:rgb(7,33,58);
+        }
+        box-shadow: 0px 1px 3px rgba(7,33,58,0.2);        
+    }
 }
