--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,10 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   defaultbgcolor: rgb(7,33,58),
-  slidecolor: #0D3E63
+  slidecolor: #0D3E63,
+  colorseries1:#4bacc6,
+  colorseries2:#9bbb59,
+  colorseries3:#8064a2,
 );
 
 
