--- a/src/pages/tax/tax.scss
+++ b/src/pages/tax/tax.scss
@@ -9,7 +9,7 @@ page-tax {
       .title-title {
         color: white;
         font-size: 58px;
-        width: 80%;
+        width: 70%;
         display: inline-block;
       }
       .title-select {
@@ -22,6 +22,7 @@ page-tax {
         }
         ion-select {
           font-size: 28px;
+          padding: 5px 8px 0px 15px !important;
           ion-option {
             font-size: 28px;
           }
@@ -113,7 +114,7 @@ page-tax {
     }
     .profit-header {
       overflow: hide;
-      height: 75px;
+      height: 60px;
       border-width: 1px;
       border-style: none none solid none;
       ion-col {
