--- a/src/pages/tax/tax.scss
+++ b/src/pages/tax/tax.scss
@@ -1,4 +1,8 @@
 page-tax {
+  // 背景色
+  $color-bg: rgb(7, 33, 58);
+  $color-white: #FFFFFF; //ionic 的颜色
+  $radio-md-color-on: rgb(141, 20, 20);
   ion-navbar {
     height: 80px;
     ion-title {
@@ -7,36 +11,39 @@ page-tax {
         display: inline-block;
       }
       .title-title {
-        color: white;
+        color: $color-white;
         font-size: 58px;
         width: 70%;
         display: inline-block;
       }
       .title-select {
         display: inline-block;
-        width: 14%;
+        width: 20%;
         ion-label {
           margin: 0;
           margin-top: 8%;
-          font-size: 28px;
+          font-size: 34px;
         }
         ion-select {
-          font-size: 28px;
-          padding: 5px 8px 0px 15px !important;
+          font-size: 36px;
+          padding: 5px 8px 0px 0px !important;
           ion-option {
-            font-size: 28px;
+            font-size: 34px;
           }
-        }
+        } 
+        // ion-item {
+        //   color: $color-white !important;
+        // }
       }
     }
     ion-buttons {
       button {
         p {
-          color: white;
+          color: $color-white;
           font-size: 25px;
         }
         ion-input {
-          color: white;
+          color: $color-white;
           font-size: 25px;
         }
       }
@@ -48,7 +55,7 @@ page-tax {
     }
   }
   ion-content {
-    background-color: rgb(7, 33, 58) !important;
+    background-color: $color-bg !important;
   }
   .segment-year {
     // width: 50%;
@@ -58,16 +65,16 @@ page-tax {
       font-size: 4rem !important;
     }
     ion-segment {
-      border-color: rgb(7, 33, 58) !important;
-      background-color: rgb(7, 33, 58) !important;
+      border-color: $color-bg !important;
+      background-color: $color-bg !important;
     }
   }
   .maincontenttopstyle {
-    color: #FFFFFF;
-    background-color: rgb(7, 33, 58);
+    color: $color-white;
+    background-color: $color-bg;
     ion-card-header {
-      color: #FFFFFF;
-      background-color: rgb(7, 33, 58);
+      color: $color-white;
+      background-color: $color-bg;
     }
     ion-card-content {
       padding: 0;
@@ -76,40 +83,40 @@ page-tax {
     padding:0% 0% 0% 5%;
   }
   .piediv {
-    color: #FFFFFF;
-    background: rgb(7, 33, 58);
+    color: $color-white;
+    background: $color-bg;
     padding: 0%;
     width: 100%;
     height: 400px;
   }
   .maincontentstyle {
-    color: #FFFFFF;
-    background-color: rgb(7, 33, 58);
+    color: $color-white;
+    background-color: $color-bg;
     ion-card-header {
-      color: #FFFFFF;
-      background-color: rgb(7, 33, 58);
+      color: $color-white;
+      background-color: $color-bg;
     }
     box-shadow: 0px 1px 3px rgba(7, 33, 58, 0.2);
     padding:0% 0% 0% 5%;
   }
   .bardiv {
-    color: #FFFFFF;
-    background: rgb(7, 33, 58);
+    color: $color-white;
+    background: $color-bg;
     padding: 0%;
     margin: 0%;
     width: 100%;
     height: 350px;
   }
   .profitgridstyle {
-    color: #FFFFFF;
-    background: rgb(7, 33, 58);
+    color: $color-white;
+    background: $color-bg;
     padding: 0% 0% 0% 0%;
     margin: 0% 0% 0% 0px;
     width: 100%;
     ion-grid {
       padding: 0% 0% 0% 0%;
       overflow: hide;
-      color: #FFFFFF;
+      color: $color-white;
       font-size: 20px;
     }
     .profit-header {
