1. 税务数据中心，库存数据中心，头部时间选择对其。图表去除toolbox

--- a/src/pages/tax/tax.scss
+++ b/src/pages/tax/tax.scss
@@ -30,13 +30,11 @@ page-tax {
           ion-option {
             font-size: 34px;
           }
-        } 
-        // ion-item {
-        //   color: $color-white !important;
-        // }
+        }
       }
     }
     ion-buttons {
+      margin-top: 22px;
       button {
         p {
           color: $color-white;
