--- a/src/pages/inventory/inventory.scss
+++ b/src/pages/inventory/inventory.scss
@@ -30,12 +30,11 @@ page-inventory {
           ion-option {
             font-size: 34px;
           }
-        } // ion-item {
-        //   color: $color-white !important;
-        // }
+        }
       }
     }
     ion-buttons {
+      margin-top: 22px;
       button {
         p {
           color: $color-white;
