版本：1.1.16 更新内容：1. 改变自动更新地址

--- a/src/pages/popmonth/popmonth.scss
+++ b/src/pages/popmonth/popmonth.scss
@@ -1,5 +1,5 @@
 page-popmonth {
-  $color-bg: #1C84D4;
+  $color-bg: #1C84D4; //#1C84D4; //#0D3E63
   $color-white: #FFFFFF;
   $pop-font-size-title: 2.6rem;
   $pop-font-size-list: 2.5rem;
