--- a/src/pages/investright/investright.scss
+++ b/src/pages/investright/investright.scss
@@ -1,6 +1,8 @@
 page-investright {
   // 背景色
   $color-bg: rgb(7, 33, 58);
+  $top-card-color-bg: rgba(255, 255, 255, 0.1);
+  $sheet-card-color-bg: rgba(18, 42, 63, 0.6);
   $color-white: #FFFFFF; //ionic 的颜色
   $radio-md-color-on: rgb(141, 20, 20);
   ion-navbar {
@@ -139,4 +141,48 @@ page-investright {
       }
     }
   }
+  .top-card {
+    background: transparent;
+    background-color: $top-card-color-bg;
+    ion-card {
+      background-color: $top-card-color-bg;
+      ion-card-content {
+        ion-card-title,
+        p {
+          font-weight: 900;
+          font-size: 38px;
+        }
+      }
+    }
+  }
+  .sheet-card {
+    background-color: $sheet-card-color-bg;
+    margin-top: 30px;
+    ion-grid {
+      overflow: auto;
+      color: $color-white;
+      .sheet-row-header {
+        font-size: 30px;
+        overflow: hide;
+        height: 55px;
+        border-width: 1px;
+        border-style: none none solid none;
+        background-color: rgba(46, 146, 222, 0.9);
+      }
+      .sheet-row-content {
+        overflow: hide;
+        height: 60px;
+        border-width: 1px;
+        border-style: none none solid none;
+        ion-col {
+          font-size: 25px;
+          border-width: 1px;
+          border-style: none solid none none;
+        }
+      }
+    }
+  }
+  .show-red {}
+  .show-green {}
+  .show-yellow {}
 }
