--- a/src/pages/inventorymodal/inventorymodal.scss
+++ b/src/pages/inventorymodal/inventorymodal.scss
@@ -1,4 +1,4 @@
-page-mfgcountmodel {
+page-inventorymodal {
   ion-footer button {
     margin: 0 !important;
   }
@@ -19,8 +19,8 @@ page-mfgcountmodel {
     top: calc(50% - (50%/2));
     left: 0;
     right: 0;
-    width: 70%;
-    height: 55%;
+    width: 35%;
+    height: 35%;
     padding: 10px;
     z-index: 100;
     margin: 0 auto;
