--- a/src/pages/management/management.scss
+++ b/src/pages/management/management.scss
@@ -72,6 +72,7 @@ page-management {
   .top-card {
     background: transparent;
     background-color: $top-card-color-bg;
+    margin-left: 80px;
     ion-card {
       background-color: $top-card-color-bg;
       ion-card-content {
